--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Light1810.github.io/aakash-portfolio",
   "name": "react-vs-vanilla-demo",
   "version": "1.0.0",
   "description": "",
@@ -12,10 +13,13 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "gh-pages": "^6.1.1",
     "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "perdeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
