--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://Light1810.github.io/aakash-portfolio",
-  "name": "react-vs-vanilla-demo",
+  "name": "aakash-portfolio",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
